--- a/utils.css
+++ b/utils.css
@@ -86,6 +86,12 @@
     object-fit:none;
 }
 
+.event_banner{
+    background-color: #2a2a2a;
+    display: flex;
+    justify-content: center;
+}
+
 .banner{
     background-color: black;
     width: 100%;
@@ -115,6 +121,23 @@
     font-size: 0.5dv75;
     color: #9a9a9a;
     font-weight: 400;
+}
+
+.light{
+    color: white;
+}
+
+.white_btn{
+    background-color: white;
+    padding: 0.5rem;
+    color: #1a1a1a;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.white_btn:hover{
+    translate: tran;
 }
 
 @media (min-width:475px){
