--- a/utils.css
+++ b/utils.css
@@ -22,6 +22,7 @@
 .search_button{
     border-radius: 1rem;
     margin-right: 0.5rem;
+    margin-left: 1rem;
     cursor: pointer;
 }
 
@@ -142,7 +143,29 @@
     translate: tran;
 }
 
+.right{
+    display: flex;
+    align-items: center;
+}
 
+.nav_items{
+    list-style: none;
+    color: #9a9a9a;
+    font-weight: 600;
+    user-select: none;
+    cursor: pointer;
+    display: none;
+    gap: 3rem;
+    margin-right: 2rem;
+}
+
+.nav_item{
+    transition: 0.3s;
+}
+
+.nav_item:hover{
+    color: white;
+}
 
 @media (min-width:475px){
 
@@ -166,8 +189,9 @@
         width:8rem;
     }
     .header_logo{
-        margin-left: 1rem;
+        margin-left: 2rem;
     }
+    
 
     #preloader{
         background-size: 25%;
@@ -195,5 +219,11 @@
     .location_button{
         font-size: 1rem;
         width: 6rem;
+    }
+    .nav_items{
+        display: flex;
+    }
+    .right{
+        margin-right: 2rem;
     }
 }
