--- a/utils.css
+++ b/utils.css
@@ -93,6 +93,12 @@
     justify-content: center;
 }
 
+.banner_pitch{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .banner{
     background-color: black;
     width: 100%;
