--- a/utils.css
+++ b/utils.css
@@ -34,7 +34,7 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: nowrap;
-    background-color: goldenrod;
+    background-color: #4a4a4a;
 }
 
 .location_button{
@@ -43,7 +43,7 @@
     font-weight: 600;
     transition: 0.3s;
     width: 5rem;
-    color: #4a4a4a;
+    color: #9a9a9a;
     font-size: 0.8rem;
     cursor: pointer;
     user-select: none;
