--- a/utils.css
+++ b/utils.css
@@ -34,7 +34,7 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: nowrap;
-    background-color: #4a4a4a;
+    background-color: #2a2a2a;
 }
 
 .location_button{
@@ -97,6 +97,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 1rem;
 }
 
 .banner{
@@ -117,6 +118,14 @@
     font-weight: 500;
 }
 
+.subtitle{
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 500;
+    padding: 1rem;
+    border-bottom: 1px solid grey;
+}
+
 .sub_heading{
     font-size: 1rem;
     font-weight: 600;
@@ -125,7 +134,7 @@
 
 .desc{
     margin-top: 1rem;
-    font-size: 0.5dv75;
+    font-size: 1rem;
     color: #9a9a9a;
     font-weight: 400;
 }
@@ -194,6 +203,11 @@
     height: 30ch;
     border: 1px solid grey;
     border-radius: 1rem;
+    background-color: #1a1a1a
+}
+
+.feature_text{
+    padding: 1.5rem;
 }
 
 @media (min-width:475px){
@@ -258,5 +272,8 @@
     }
     .right{
         margin-right: 2rem;
+    }
+    .banner_pitch{
+        padding: 4rem;
     }
 }
